📱fixed a mobile layout bug

--- a/pages/styles/toastify.css
+++ b/pages/styles/toastify.css
@@ -15,7 +15,7 @@
   --toastify-toast-min-height: 64px;
   --toastify-toast-max-height: 200px;
   --toastify-font-family: sans-serif;
-  --toastify-z-index: 9999;
+  --toastify-z-index: 100;
   --toastify-text-color-light: #757575;
   --toastify-text-color-dark: #fff;
   --toastify-text-color-info: #fff;
